--- a/public/views/partials/admin/home.html
+++ b/public/views/partials/admin/home.html
@@ -50,7 +50,7 @@
 	            </div>
 	            <div class="box-footer no-padding">
 	              	<ul class="nav nav-stacked">
-	              		<li><a href="#"><span class="profile-label" >Student ID </span><span class="pull-right" ng-bind="profile.id"></span></a></li>
+	              		<li><a href="#"><span class="profile-label" >User ID </span><span class="pull-right" ng-bind="profile.id"></span></a></li>
 	                	<li><a href="#"><span class="profile-label">Email </span><span class="pull-right" ng-bind="profile.email"></span></a></li>
 	                	<li><a href="#"><span class="profile-label">Total courses </span><span class="pull-right badge bg-blue" ng-bind="profile.total_course"></span></a></li>
 	                	<li><a href="#"><span class="profile-label">On-going courses </span><span class="pull-right badge bg-green-active" ng-bind="profile.on_going_course"></span></a></li>
