--- a/public/views/partials/admin/assignment.html
+++ b/public/views/partials/admin/assignment.html
@@ -119,7 +119,7 @@
                                 <li>
                                     <a href="#">
                                         <label>Created at: </label>
-                                        <br/><span ng-bind="submission.DATE_CREATED | date: 'dd/MM/yyyy  HH:mm:ss"></span></a>
+                                        <br/><span ng-bind="submission.DATE_CREATED | date: 'dd/MM/yyyy  HH:mm:ss'"></span></a>
                                 </li>
                                 <li>
                                     <a href="#">
@@ -130,11 +130,10 @@
                                     <a href="#">
                                         <label>Attachments: </label>
                                         <br/>
-                                        <span ng-if="assignment_attachment.length == 0">
-                                            N/A
+                                        <span ng-if="submission_attachment.length == 0">
+                                            No attachment.
                                         </span>
                                     </a>
-
                                     <div class="row">
                                         <div class="col-md-6 col-xs-12" ng-repeat="sa in submission_attachment">
                                             <a class="info-box" href="{{sa.attURL}}" style="color: blue" target="_self" download="{{sa.NAME}}">
